PR/52791: Robert Sprowson: avoid duplicate tests (use accessor variables)